blog page header change

--- a/html/blog.html
+++ b/html/blog.html
@@ -36,12 +36,14 @@
 	<div id="header">
 		<div class="container">
 			<div id="topHeader" class="cf">
+				<div class="floatLeft">
+					<h1 id="logo"><a href="#"><img src="img/logo.jpg"></a></h1>
+				</div>
 				<div class="floatRight">
 					<span id="callUs"><b>CALL US</b>: +7 (495) 744 33 01</span>
 					<a href="" id="loginButon" class="button grey">Login</a>
 				</div>
 			</div>
-			<h1 id="logo"><a href="#"><img src="img/logo.jpg"></a></h1>
 			<div id="navHolder">
 				<ul id="nav" class="cf">
 				 	<li><a href="vision-therapy.html">What is Vision Therapy?</a>
