--- a/html/blog.html
+++ b/html/blog.html
@@ -37,7 +37,7 @@
 		<div class="container">
 			<div id="topHeader" class="cf">
 				<div class="floatLeft">
-					<h1 id="logo"><a href="#"><img src="img/logo.jpg"></a></h1>
+					<h1 id="logo"><a href="index.html"><img src="img/logo.jpg"></a></h1>
 				</div>
 				<div class="floatRight">
 					<span id="callUs"><b>CALL US</b>: +7 (495) 744 33 01</span>
@@ -191,16 +191,9 @@
 	<script type="text/javascript" src="assets/carousel/js/jquery.easing.1.3.js"></script>
 	<script type="text/javascript" src="assets/carousel/js/jquery.mousewheel.js"></script>
 	<script type="text/javascript" src="assets/carousel/js/jquery.contentcarousel.js"></script>
+	<script type="text/javascript" src="js/script-for-all.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function($) {
-			$('#loginButon').click(function(){
-				$('#topPanel').slideToggle();
-				return false;
-			});
-			$('#close').click(function(){
-				$('#topPanel').slideToggle();
-				return false;
-			});
 			$('#ca-container').contentcarousel();
 		});
 	</script>
