--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>Vision Therapy Children, Adults. Behavioral Optometrist Virginia – Dr Tod R Davis</title>
 	<link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 
 	<!-- slider -->
 	<link href="assets/royalslider/royalslider.css" rel="stylesheet">
@@ -37,11 +37,15 @@
 		<div class="container">
 			<div id="topHeader" class="cf">
 				<div class="floatLeft">
-					<h1 id="logo"><a href="#"><img src="img/logo.jpg"></a></h1>
+					<h1 id="logo"><a href="index.html"><img src="img/logo.jpg"></a></h1>
 				</div>
-				<div class="floatRight">
+				<div id="topRightHeader" class="floatRight">
 					<span id="callUs"><b>CALL US</b>: +7 (495) 744 33 01</span>
-					<a href="" id="loginButon" class="button grey">Login</a>
+					
+					<ul id="topnav" class="cf">
+						<li><a href="blog.html">Blog</a></li>
+						<li><a href="#" class="toggleButton">Eye Health Library</a></li>
+					</ul>
 				</div>
 			</div>
 			<div id="navHolder">
@@ -293,16 +297,9 @@
 	<script type="text/javascript" src="assets/carousel/js/jquery.easing.1.3.js"></script>
 	<script type="text/javascript" src="assets/carousel/js/jquery.mousewheel.js"></script>
 	<script type="text/javascript" src="assets/carousel/js/jquery.contentcarousel.js"></script>
+	<script type="text/javascript" src="js/script-for-all.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function($) {
-			$('#loginButon').click(function(){
-				$('#topPanel').slideToggle();
-				return false;
-			});
-			$('#close').click(function(){
-				$('#topPanel').slideToggle();
-				return false;
-			});
 			$('#ca-container').contentcarousel();
 		});
 	</script>
